ncc/testsuite/negative/fail-this.n
class C {
  m () : C { this }    // OK
  static f () : C { this }        // E: `this' used outside method
}
